[package]
name = "cxx-noexception-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = { path = "../cxx", features = ["no_exceptions"] }
anyhow = "1"

[build-dependencies]
cxx-build = { path = "../cxx/gen/build" }
