[package]
name = "cxx-noexception-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[features]
no-exceptions = ["cxx/no-exceptions"]

[dependencies]
cxx = { path = "../cxx" }
anyhow = "1"

[build-dependencies]
cxx-build = { path = "../cxx/gen/build" }
